--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-librosa>=0.10.0
-numpy>=1.20.0
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+numpy>=1.24.3
 soundfile>=0.12.1
-mido>=1.2.10
-pyfluidsynth>=1.3.4
-scipy>=1.7.0
-pydub>=0.25.1
-ffmpeg-python>=0.2.0
-pyworld>=0.3.4 
-pedalboard>=0.9.0 
+librosa>=0.10.1
+pyworld==0.3.4
+scipy>=1.11.3
+pydantic>=2.4.2
+python-multipart>=0.0.6 
