--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,17 @@
 {
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "$1"
+    }
+  ],
   "functions": {
     "api/process.py": {
       "runtime": "python3.9",
