--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,10 @@
     },
     {
       "src": "api/process.py",
-      "use": "@vercel/python@3.0.0"
+      "use": "@vercel/python@3.0.0",
+      "config": {
+        "runtime": "python3.11"
+      }
     }
   ],
   "routes": [
