--- a/vercel.json
+++ b/vercel.json
@@ -15,12 +15,8 @@
   },
   "routes": [
     {
-      "src": "/api/run",
-      "dest": "api/run.py"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "src": "/api/process/(.*)",
+      "dest": "/api/process/$1"
     },
     {
       "src": "/(.*)",
