--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,12 @@
     {
       "src": "package.json",
       "use": "@vercel/next"
+    },
+    {
+      "src": "api/process.py",
+      "use": "@vercel/python"
     }
   ],
-  "functions": {
-    "api/process.py": {
-      "runtime": "python3.11",
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  },
   "routes": [
     {
       "src": "/api/process/(.*)",
